[gd_scene load_steps=2 format=3 uid="uid://8q8un1nujmm3"]

[ext_resource type="Script" uid="uid://bhrip4dphcyig" path="res://scripts/autoloads/action_menu.gd" id="1_vx0cl"]

[node name="ActionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vx0cl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -165.0
offset_right = 271.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Operation"
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="BtnInfiltrate" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Inflitrate"

[node name="BtnStabilize" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Stabilize
"

[node name="BtnDelay" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Delay
"

[node name="BtnCancel" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Cancel
"
